--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py
+git+https://github.com/Rapptz/discord.py@async#egg=discord.py[voice]
